--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -4,3 +4,14 @@
     border: 1px solid #e2e5e6;
     margin: 4px
 }
+
+
+.product-card:hover {
+    box-shadow: 0px 4px 8px rgba(92, 107, 192, 0.2),
+    0px 2px 4px rgba(59, 69, 123, 0.2);
+}
+
+.product-card img {
+    object-fit: contain;
+    height: 250px;
+}
